FIX gaps in mainmenu

--- a/Packages/Sites/Sfi.Sfi/Frontend/scss/Molecules/Nav/_MainMenu.scss
+++ b/Packages/Sites/Sfi.Sfi/Frontend/scss/Molecules/Nav/_MainMenu.scss
@@ -16,6 +16,7 @@
 	}
 	.MainMenu-Item, .MainMenu-SubItem {
 		@include link-state();
+		display: inline-block;
 	}
 	.MainMenu-Wrap{
 		overflow: hidden;
